--- a/pom.xml
+++ b/pom.xml
@@ -131,18 +131,18 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.4.1</version> <!-- or 3.2.4, but 3.4.1 is newer -->
+				<version>3.4.1</version>
 				<executions>
 					<execution>
+						<id>override-shade</id>
 						<phase>package</phase>
 						<goals>
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+							<!-- Use the correct transformer with only <mainClass> -->
 							<transformers>
-								<transformer
-										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<!-- Match this to your actual package + class name -->
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>com.weather_forecasting_system.WeatherForecastingSystemApplication</mainClass>
 								</transformer>
 							</transformers>
@@ -150,6 +150,7 @@
 					</execution>
 				</executions>
 			</plugin>
+
 
 		</plugins>
 	</build>
