--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,7 @@
 <project
 		xmlns="http://maven.apache.org/POM/4.0.0"
 		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="
-        http://maven.apache.org/POM/4.0.0
-        https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -16,20 +14,18 @@
 		<relativePath/>
 	</parent>
 
-	<!-- Choose a groupId without dashes; underscores are possible but not recommended -->
 	<groupId>com.weather_forecasting_system</groupId>
 	<artifactId>weather-forecasting-system</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>weather-forecasting-system</name>
 	<description>Demo project for Spring Boot</description>
 
+	<!-- For AWS Lambda, using Java 11 for compatibility -->
 	<properties>
-		<!-- Adjust to the desired Java version -->
 		<java.version>21</java.version>
 	</properties>
 
 	<dependencies>
-
 		<!-- Spring Boot Web & Data JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -82,6 +78,12 @@
 			<version>0.11.5</version>
 		</dependency>
 
+		<!-- PostgreSQL Driver (Runtime) -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- Spring Security Test -->
 		<dependency>
@@ -90,6 +92,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- SpringDoc OpenAPI -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 
 		<!-- Validation -->
 		<dependency>
@@ -103,32 +111,40 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
 		<plugins>
-
 			<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<!-- Maven Shade Plugin -->
+			<!-- Maven Shade Plugin for Creating a Fat JAR with Exclusions -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.4.1</version>
 				<executions>
 					<execution>
-						<id>override-shade</id>
+						<id>shade-jar</id>
 						<phase>package</phase>
 						<goals>
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<!-- Use the correct transformer with only <mainClass> -->
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+										<exclude>**/module-info.class</exclude>
+									</excludes>
+								</filter>
+							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>com.weather_forecasting_system.WeatherForecastingSystemApplication</mainClass>
@@ -138,8 +154,7 @@
 					</execution>
 				</executions>
 			</plugin>
-
-
 		</plugins>
 	</build>
+
 </project>
